--- a/绘画技术.md
+++ b/绘画技术.md
@@ -6,13 +6,13 @@
 
    会话劫持可以通过使用安全的会话管理机制、加密通信、防范跨站脚本攻击、防范会话固定攻击、限制会话的有效期、监控和检测异常行为等措施进行防御
 
-1  跨站脚本攻击（XSS）和防御
+2  跨站脚本攻击（XSS）和防御
 
    跨站脚本攻击是一种常见的网络安全漏洞，攻击者通过在目标网站中注入恶意脚本，当用户访问该网站时，恶意脚本在用户的浏览器中执行，从而窃取用户的敏感信息、篡改页面内容或者执行其他恶意操作。
 
    XSS攻击可以通过输入验证和过滤、输出编码、设置 HTTP 头、使用安全的开发框架、定期进行安全审计等措施进行防御。
 
-1  跨站请求伪造（CSRF）和防御
+3  跨站请求伪造（CSRF）和防御
 
    跨站请求伪造（Cross-Site Request Forgery，CSRF）是一种利用用户已登录的身份，在用户不知情的情况下，以用户的名义向网站发送恶意请求的攻击方式。CSRF 攻击通常发生在用户访问了恶意网站或者点击了恶意链接时，这些恶意网站或链接会自动向目标网站发送请求，而用户的浏览器会自动携带用户在目标网站的登录凭证，从而使请求被视为合法请求。
 
@@ -28,31 +28,31 @@
 
    b.用户在一个服务器节点上进行的操作，在切换到另一个服务器节点后，操作结果无法正确显示，或者操作状态丢失。
 
-1  <a name="ole_link1"></a>Session集群解决方案
+2  Session集群解决方案
 
    在应用服务器中，当用户创建或更新 Session 时，需要将 Session 数据同步到集群中的其他节点。这可以通过在写入 Session 数据时，同时将数据发送到其他节点进行同步，或者使用分布式消息队列等机制来实现。常见的 Session 集群方案有基于数据库、基于缓存（如 Redis）和使用专门的分布式 Session 管理框架等。根据项目的具体需求和技术栈，选择最适合的方案。
 
-1  使用Redis等缓存技术实现分布式会话
+3  使用Redis等缓存技术实现分布式会话
 
    例如，在使用 Redis 作为 Session 存储时，可以使用 Redis 的发布 / 订阅功能来实现 Session 的同步。当一个应用服务器修改了 Session 数据时，它可以发布一个消息，其他应用服务器订阅这个消息，从而实现 Session 的同步更新。
 
-1  会话状态的序列化和反序列化
+4  会话状态的序列化和反序列化
 
    在其他节点接收到序列化后的会话状态字节序列后，进行反序列化，恢复会话状态对象。然后，可以根据需要对会话状态进行处理，如更新用户信息、添加购物车商品等。
 
    为了确保会话状态的同步，可以使用分布式锁、版本控制等机制，以防止多个节点同时修改会话状态导致的数据不一致问题。
 
-1  为什么需要序列化会话状态
+5  为什么需要序列化会话状态
 
    通过序列化会话状态，可以将其转换为一种可以在网络上传输的格式，使得不同节点之间能够交换和共享会话信息。
 
-1  <a name="ole_link2"></a>Java对象序列化
+6  <a name="ole_link2"></a>Java对象序列化
 
    Java 对象序列化允许将对象转换为字节流，这个字节流可以在网络上传输或者存储到外部存储介质中。在分布式环境中，一个节点可以将对象序列化后发送给其他节点，接收节点再进行反序列化，从而获得相同的对象状态。
 
    通过序列化，对象的状态可以被持久化到磁盘或数据库中。在分布式系统中，如果一个节点出现故障，其他节点可以从持久化的状态中恢复对象，从而保持系统的整体状态一致。
 
-1  自定义序列化策略
+7  自定义序列化策略
 
    默认的 Java 序列化机制可能会产生较大的字节流，导致网络传输和存储开销增加。通过自定义序列化策略，可以选择更紧凑的数据表示方式，提高序列化和反序列化的速度。
 
