--- a/绘画技术.md
+++ b/绘画技术.md
@@ -49,7 +49,28 @@
 6  <a name="ole_link2"></a>Java对象序列化
 
    Java 对象序列化允许将对象转换为字节流，这个字节流可以在网络上传输或者存储到外部存储介质中。在分布式环境中，一个节点可以将对象序列化后发送给其他节点，接收节点再进行反序列化，从而获得相同的对象状态。
+   粗略的实现：
+   让需要被序列化的类实现java.io.Serializable接口。这个接口没有任何方法需要实现，它只是一个标记接口，用于告诉 JVM 这个类的对象可以被序列化。
+   public class Person implements Serializable {
+       private String name;
+       private int age;
 
+       // 构造方法、getter 和 setter 方法
+   }
+   使用 ObjectOutputStream 和 ObjectInputStream 进行序列化和反序列化
+      Person person = new Person("Alice", 30);
+   try (ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream("person.ser"))) {
+       oos.writeObject(person);
+   } catch (IOException e) {
+       e.printStackTrace();
+   }
+      try (ObjectInputStream ois = new ObjectInputStream(new FileInputStream("person.ser"))) {
+       Person deserializedPerson = (Person) ois.readObject();
+       System.out.println(deserializedPerson.getName() + " " + deserializedPerson.getAge());
+   } catch (IOException | ClassNotFoundException e) {
+       e.printStackTrace();
+   }
+   
    通过序列化，对象的状态可以被持久化到磁盘或数据库中。在分布式系统中，如果一个节点出现故障，其他节点可以从持久化的状态中恢复对象，从而保持系统的整体状态一致。
 
 7  自定义序列化策略
